// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningsViews WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsViews WarningsView does displays a warning 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-4 eyxhwb"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-5 efmbmX"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-10 gVDJxl"
        >
          WARNING xx0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-16 gHlNfv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
        >
          This is xx2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-19 bNiVzc"
          >
            EXPLAIN MATCH xx3
            <br
              class="styled__StyledBr-sc-1dtvgs1-18 eMYrmQ"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsViews WarningsView does displays multiple warnings 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-4 eyxhwb"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-5 efmbmX"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-10 gVDJxl"
        >
          WARNING xx0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-16 gHlNfv"
        >
          My xx1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
        >
          This is xx2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-19 bNiVzc"
          >
            EXPLAIN MATCH zz3
            <br
              class="styled__StyledBr-sc-1dtvgs1-18 eMYrmQ"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-5 efmbmX"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
      >
        <div
          class="styled__StyledCypherMessage-sc-1dtvgs1-10 gVDJxl"
        >
          WARNING yy0
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-16 gHlNfv"
        >
          My yy1 warning
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
      >
        <div
          class="styled__StyledHelpDescription-sc-1dtvgs1-6 eUrIkF"
        >
          This is yy2 warning
        </div>
        <div
          class="styled__StyledDiv-sc-1dtvgs1-7 hvhkie"
        >
          <pre
            class="styled__StyledPreformattedArea-sc-1dtvgs1-19 bNiVzc"
          >
            EXPLAIN MATCH zz3
            <br
              class="styled__StyledBr-sc-1dtvgs1-18 eMYrmQ"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
